<resources>
    <string name="app_name">Планировщик задач</string>

    <string name="login">Вход</string>
    <string name="register">Регистрация</string>

    <!-- Описания контента -->
    <string name="add_description">Добавить новую задачу</string>
    <string name="save_description">Сохранить добавленную задачу</string>
    <string name="priority_description">Иконка приоритета</string>
    <string name="category_description">Иконка категории</string>
    <string name="time_description">Иконка времени</string>
    <string name="calendar_description">Иконка календаря</string>
    <string name="edit_title_description">Иконка редактирования заголовка</string>
    <string name="chosen_description">Выбранный элемент</string>
    <string name="previous_day">Выбрать предыдущий день</string>
    <string name="next_day">Выбрать следующий день</string>
    <string name="search">Поиск</string>

    <!-- Подсказки -->
    <string name="description">Описание</string>
    <string name="title">Заголовок</string>

    <!-- Метки -->
    <string name="task_time">Время задачи:</string>
    <string name="task_category">Категория задачи:</string>
    <string name="task_priority">Приоритет задачи:</string>
    <string name="task_title">Заголовок задачи:</string>

    <!-- Заголовки -->
    <string name="add_task">Добавить задачу</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="choose_category">Выбрать категорию</string>
    <string name="choose_priority">Выбрать приоритет</string>
    <string name="delete_task">Удалить задачу</string>

    <!-- Кнопки -->
    <string name="cancel_button">Отмена</string>
    <string name="save_button">Сохранить</string>
    <string name="save_changes_button">Сохранить изменения</string>
    <string name="delete_button">Удалить</string>

    <!-- Сообщения -->
    <string name="confirm_delete">Вы уверены, что хотите удалить эту задачу?</string>
    <string name="sort_by">Сортировать по</string>
    <string name="time">Время</string>
    <string name="priority">Приоритет</string>
    <string name="registration_question">Нет аккаунта? Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
</resources>