<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/secondary_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center">

        <!-- Поле ввода Email -->
        <EditText
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_background" />

        <!-- Поле ввода пароля -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_background" />

        <!-- Кнопка логина -->
        <Button
            android:id="@+id/loginButton"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:layout_marginBottom="16dp" />

        <!-- Ссылка для регистрации -->
        <TextView
            android:id="@+id/registerLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_question"
            android:gravity="center"
            android:textColor="@android:color/black" />
    </LinearLayout>
</ScrollView>