<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <!-- Фрагмент для логина -->
    <fragment
        android:id="@+id/loginFragment"
        android:label="@string/login"
        android:name="com.example.tasks.ui.auth.LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <!-- Фрагмент для регистрации -->
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.tasks.ui.auth.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <!-- Фрагмент для списка задач -->
    <fragment
        android:id="@+id/listFragment"
        android:label="@string/app_name"
        android:name="com.example.tasks.ui.list.ListFragment"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_editFragment"
            app:destination="@id/editFragment" />
        <argument
            android:name="pageDate"
            app:argType="java.time.OffsetDateTime"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <!-- Фрагмент для редактирования задачи -->
    <fragment
        android:id="@+id/editFragment"
        android:name="com.example.tasks.ui.edit.EditFragment"
        android:label="@string/edit_task"
        tools:layout="@layout/fragment_edit">
        <action
            android:id="@+id/action_editFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/listFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="task"
            app:argType="com.example.tasks.data.model.Task" />
    </fragment>
</navigation>