<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/secondary_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:layout_marginBottom="16dp"
            android:text="@string/register" />
    </LinearLayout>
</ScrollView>